--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@
     <label><input type="checkbox" value="freelancer_reviewed"> راجعت عمل الفريلانسر وتأكدت من دقة الإدخالات</label>
     <textarea placeholder="أسماء الفريلانسر أو نوع المهام التي تمت مراجعتها"></textarea>
 
+    
+
     <label><input type="checkbox" value="accounting_corrections"> صححت أو عدّلت بيانات محاسبية خاطئة</label>
     <textarea placeholder="اذكر نوع الأخطاء التي تم تصحيحها"></textarea>
 
@@ -214,6 +216,9 @@
   <!-- التقارير الإدارية -->
   <fieldset>
     <legend>التقارير الإدارية</legend>
+
+    <label><input type="checkbox" value="freelancer_reviewed">  تم التنسيق مع الرئيس التنفيذي حول التقدم في المشاريع </label>
+    <textarea placeholder=></textarea>
 
     <label><input type="checkbox" value="slack_report_sent"> أرسلت التقرير اليومي في قناة Slack #CFO_CEO</label>
     <textarea placeholder="وقت الإرسال أو ملاحظات إضافية"></textarea>
