--- a/index.html
+++ b/index.html
@@ -266,9 +266,14 @@
   <!-- التقارير والمراجعة اليومية -->
   <fieldset>
     <legend>التقارير والمراجعة اليومية</legend>
-    <label><input type="checkbox"> راجعت كشوفات البنوك</label>
-    <label><input type="checkbox"> تمت مطابقة الأرصدة البنكية داخل Zoho</label>
-    <label><input type="checkbox"> راجعت الحركات اليومية</label>
+  
+    <label><input type="checkbox"> راجعت كشوفات البنوك </label>
+    <label><input type="checkbox"> تمت مطابقة الأرصدة داخل Zoho </label>
+    <label><input type="checkbox"> راجعت الحركات اليومية (التحويلات + الإيداعات) </label>
+    <label><input type="checkbox"> تأكدت من تسجيل فواتير الموردين الجديدة </label>
+    <label><input type="checkbox"> تأكدت من ربط فواتير المبيعات بالموردين/الأرصدة </label>
+    <label><input type="checkbox"> تابعت عمليات الدفع المعلقة أو المؤجلة </label>
+    <label><input type="checkbox">  تأكدت من تصنيف المصروفات اليومية </label>
 
     <label style="margin-top:12px;"><input type="checkbox" class="toggle-notes"> إضافة ملاحظات عامة لهذا القسم</label>
     <div class="notes-box"><textarea placeholder="أدخل ملاحظات هذا القسم..."></textarea></div>
@@ -277,9 +282,11 @@
   <!-- التحليل المالي -->
   <fieldset>
     <legend>التحليل المالي</legend>
-    <label><input type="checkbox"> أعددت ملخص المقبوضات والمدفوعات اليومية</label>
-    <label><input type="checkbox"> تابعت الرصيد الإجمالي للموردين</label>
-    <label><input type="checkbox"> قارنت الإيرادات اليومية بالمستهدف الشهري</label>
+    <label><input type="checkbox"> أعددت ملخص المقبوضات والمدفوعات اليومية </label>
+    <label><input type="checkbox">  تابعت الرصيد الإجمالي للموردين </label>
+    <label><input type="checkbox"> قارنت الإيرادات بالمستهدف الشهري </label>
+    <label><input type="checkbox"> راقبت نسبة النمو اليومي في المبيعات </label>
+  
 
     <label style="margin-top:12px;"><input type="checkbox" class="toggle-notes"> إضافة ملاحظات عامة لهذا القسم</label>
     <div class="notes-box"><textarea placeholder="أدخل ملاحظات هذا القسم..."></textarea></div>
@@ -409,3 +416,4 @@
 
 </body>
 </html>
+
