--- a/index.html
+++ b/index.html
@@ -295,8 +295,11 @@
   <!-- الإشراف والمتابعة -->
   <fieldset>
     <legend>الإشراف والمتابعة</legend>
-    <label><input type="checkbox"> راجعت عمل الفريلانسر</label>
+    <label><input type="checkbox"> تم التنسيق مع الرئيس التنفيذي حول التقدم في المشاريع </label>
+    <label><input type="checkbox"> راجعت عمل الفريلانسر وتأكدت من دقة الإدخالات </label>
     <label><input type="checkbox"> صححت بيانات محاسبية خاطئة</label>
+    <label><input type="checkbox"> تابعت العمليات المالية بين الفروع </label>
+    <label><input type="checkbox"> تواصلت مع البنوك بشأن عمليات أو استفسارات </label>
 
     <label style="margin-top:12px;"><input type="checkbox" class="toggle-notes"> إضافة ملاحظات عامة لهذا القسم</label>
     <div class="notes-box"><textarea placeholder="أدخل ملاحظات هذا القسم..."></textarea></div>
@@ -416,4 +419,5 @@
 
 </body>
 </html>
+
 
