--- a/index.html
+++ b/index.html
@@ -309,6 +309,8 @@
   <fieldset>
     <legend>التقارير الإدارية</legend>
     <label><input type="checkbox"> أرسلت التقرير اليومي في قناة Slack</label>
+    <label><input type="checkbox"> تم الرد علي رسائل البريد الالكتروني الهامة اليوم </label>
+    
 
     <label style="margin-top:12px;"><input type="checkbox" class="toggle-notes"> إضافة ملاحظات عامة لهذا القسم</label>
     <div class="notes-box"><textarea placeholder="أدخل ملاحظات هذا القسم..."></textarea></div>
@@ -419,5 +421,6 @@
 
 </body>
 </html>
+
 
 
