--- a/index.html
+++ b/index.html
@@ -274,9 +274,9 @@
     <label><input type="checkbox"> تأكدت من ربط فواتير المبيعات بالموردين/الأرصدة </label>
     <label><input type="checkbox"> تابعت عمليات الدفع المعلقة أو المؤجلة </label>
     <label><input type="checkbox">  تأكدت من تصنيف المصروفات اليومية </label>
-
-    <label style="margin-top:12px;"><input type="checkbox" class="toggle-notes"> إضافة ملاحظات عامة لهذا القسم</label>
-    <div class="notes-box"><textarea placeholder="أدخل ملاحظات هذا القسم..."></textarea></div>
+    
+<div class="notes-box" style="display:block;">
+  <textarea placeholder="أدخل ملاحظات هذا القسم..."></textarea>
   </fieldset>
 
   <!-- التحليل المالي -->
@@ -288,8 +288,8 @@
     <label><input type="checkbox"> راقبت نسبة النمو اليومي في المبيعات </label>
   
 
-    <label style="margin-top:12px;"><input type="checkbox" class="toggle-notes"> إضافة ملاحظات عامة لهذا القسم</label>
-    <div class="notes-box"><textarea placeholder="أدخل ملاحظات هذا القسم..."></textarea></div>
+   <div class="notes-box" style="display:block;">
+  <textarea placeholder="أدخل ملاحظات هذا القسم..."></textarea>
   </fieldset>
 
   <!-- الإشراف والمتابعة -->
@@ -301,8 +301,8 @@
     <label><input type="checkbox"> تابعت العمليات المالية بين الفروع </label>
     <label><input type="checkbox"> تواصلت مع البنوك بشأن عمليات أو استفسارات </label>
 
-    <label style="margin-top:12px;"><input type="checkbox" class="toggle-notes"> إضافة ملاحظات عامة لهذا القسم</label>
-    <div class="notes-box"><textarea placeholder="أدخل ملاحظات هذا القسم..."></textarea></div>
+ <div class="notes-box" style="display:block;">
+  <textarea placeholder="أدخل ملاحظات هذا القسم..."></textarea>
   </fieldset>
 
   <!-- التقارير الإدارية -->
@@ -311,9 +311,8 @@
     <label><input type="checkbox"> أرسلت التقرير اليومي في قناة Slack</label>
     <label><input type="checkbox"> تم الرد علي رسائل البريد الالكتروني الهامة اليوم </label>
     
-
-    <label style="margin-top:12px;"><input type="checkbox" class="toggle-notes"> إضافة ملاحظات عامة لهذا القسم</label>
-    <div class="notes-box"><textarea placeholder="أدخل ملاحظات هذا القسم..."></textarea></div>
+<div class="notes-box" style="display:block;">
+  <textarea placeholder="أدخل ملاحظات هذا القسم..."></textarea>
   </fieldset>
 
   <!-- خطة عمل الغد -->
@@ -421,6 +420,7 @@
 
 </body>
 </html>
+
 
 
 
